# yolo-gradio-app

./: .gitignore  README.md  pyproject.toml
src/: main.py
